--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-link": "^4.1.0",
     "react-native-pdf": "^6.7.5",
     "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
