--- a/app.json
+++ b/app.json
@@ -16,10 +16,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.dimoso.MfugajiApp"
+      "package": "com.dimoso.MfugajiSmart"
     },
     "web": {
       "favicon": "./assets/favicon.png"
