--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "expo": "~51.0.20",
     "expo-app-loading": "^2.1.1",
+    "expo-av": "~14.0.7",
     "expo-checkbox": "^3.0.0",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "^12.0.2",
