--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mfugaji-app",
-  "version": "1.0.0",
+  "name": "mfugaji-smart",
+  "version": "1.0.1",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
