--- a/app.json
+++ b/app.json
@@ -2,20 +2,20 @@
   "expo": {
     "name": "Mfugaji-Smart",
     "slug": "Mfugaji-Smart",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "versionCode": 1,
+      "versionCode": 2,
       "package": "ttpc.MfugajiSmart",
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
