--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-file-system": "^17.0.1",
     "expo-font": "^12.0.10",
     "expo-image-picker": "^15.0.7",
+    "expo-linear-gradient": "^13.0.2",
     "expo-print": "^13.0.1",
     "expo-sharing": "^12.0.1",
     "expo-splash-screen": "^0.27.5",
