--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ms",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -43,7 +43,8 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-sweet-alert": "^3.5.0"
+    "react-native-sweet-alert": "^3.5.0",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
